Configure CORS for Vercel frontend and allow required methods/headers